argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    name: argocd-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: argocd.localhost
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: argocd-server
            port: 
              number: 80
